# metadrive

./: .dockerignore  .gitignore  .readthedocs.yaml  .style.yapf  LICENSE.txt  MANIFEST.in  README.md  __init__.py  format.sh  iflytek_parking_data.py  make_img.py  point_cloud_prototype.py  setup.py  to_brandon.py  try.py
.github/: .codecov.yml  pull_request_template.md
bridges/: README.md
bridges/ros_bridge/src/metadrive_example_bridge/: package.xml  setup.py
bridges/ros_bridge/src/metadrive_example_bridge/launch/: metadrive_example_bridge.launch.py
bridges/ros_bridge/src/metadrive_example_bridge/metadrive_example_bridge/: camera_bridge.py  lidar_bridge.py  obj_bridge.py
bridges/ros_bridge/src/metadrive_example_bridge/rviz/: default.rviz
docs/: README.md  index.html  index_deprecated.html  nuplan.md  waymo.md
documentation/: README.md  requirements.txt
envs/: generalization_racing.py  observation_type.py
example/: test_generalization_env.py
metadrive/: __init__.py  constants.py  metadrive_type.py  pull_asset.py  register.py  type.py  version.py
pg_config/: body_name.py  parameter_space.py  pg_blocks.py  pg_config.py  pg_space.py
pg_drive/: __init__.py  register.py
pgdrive/: .coveragerc  __init__.py  constants.py  cutils.c  cutils.pyx  register.py
scene_creator/: basic_utils.py  map.py
scene_manager/: traffic_manager.py
tests/: Dockerfile  run.sh  run_all.sh  setup.sh  test.sh
utils/: element.py  math_utils.py  visualization_loader.py
world/: bt_world.py  chase_camera.py  force_fps.py  light.py  manual_controller.py  sky_box.py  (+2 more)
(+1873 files in other folders)
